--- a/css/media.css
+++ b/css/media.css
@@ -73,24 +73,45 @@
         margin-top: 20px;
     }
 }
+
 @media (max-width:640px) {
-    .text h1 span{
+    .text h1 span {
         display: none;
     }
-    .link h3{
+
+    .link h3 {
         font-size: 25px;
     }
 }
+
 @media (max-width:611px) {
-    .text h1{
+    .text h1 {
         font-size: 25px;
     }
-    .link h3{
+
+    .link h3 {
         font-size: 18px;
     }
 }
+
 @media (max-width:611px) {
     .res-icon nav ul {
         width: 50%;
+    }
+}
+
+@media (max-width:445px) {
+
+    td,th {
+        font-size: 10px;
+    }
+    main > h1{
+        font-size: 30px;
+    }
+}
+@media (max-width:435px) {
+    .res-icon label img:last-child {
+        margin-right: 20%;
+        margin-bottom: 10px;
     }
 }
