--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -50,11 +50,11 @@
     display: flex;
     flex-direction: column;
     gap: 0;
-    transition:  900ms;
-    -webkit-transition:  900ms;
-    -moz-transition:  900ms;
-    -ms-transition:  900ms;
-    -o-transition:  900ms;
+    transition: 900ms;
+    -webkit-transition: 900ms;
+    -moz-transition: 900ms;
+    -ms-transition: 900ms;
+    -o-transition: 900ms;
     transform: translateX(-300px);
     -webkit-transform: translateX(-300px);
     -moz-transform: translateX(-300px);
@@ -102,12 +102,13 @@ nav ul li a:hover {
     -o-transition: all ease-out 200ms;
 }
 
-.nav-button{
+.nav-button {
     display: flex;
     gap: 30px;
 }
 
-.nav-button button ,.nav-button a{
+.nav-button button,
+.nav-button a {
     outline: 0;
     border: 0;
     text-decoration: none;
@@ -124,7 +125,8 @@ nav ul li a:hover {
     -o-transition: 800ms;
 }
 
-.nav-button button:hover ,.nav-button a:hover{
+.nav-button button:hover,
+.nav-button a:hover {
     transform: scale(1.1);
     transition: all ease-in-out 300ms;
     -webkit-transition: all ease-in-out 300ms;
@@ -137,12 +139,14 @@ nav ul li a:hover {
     -o-transform: scale(1.1);
 }
 
-.nav-button button ,.nav-button a {
+.nav-button button,
+.nav-button a {
     background-color: var(--orange);
     color: var(--purple);
 }
 
-.nav-button button:hover ,.nav-button a:hover {
+.nav-button button:hover,
+.nav-button a:hover {
     background-color: var(--purple);
     color: var(--orange);
 }
@@ -237,28 +241,64 @@ section {
 hr {
     margin: 50px 0;
 }
-.bottom-section h2{
+
+.bottom-section h2 {
     text-align: center;
     font-size: 50px;
     margin: 20px;
 }
-.bottom-section{
+
+.bottom-section {
     width: 90%;
     margin: auto;
 }
-.bottom-section li{
+
+.bottom-section li {
     margin: 10px;
 }
-.bottom-section h3{
+
+.bottom-section h3 {
     font-size: 25px;
     margin: 20px;
 }
-.bottom-section h4{
+
+.bottom-section h4 {
     text-align: center;
     color: var(--purple);
     font-size: 25px
 }
+
 footer {
     text-align: center;
     padding: 30px 0 20px;
+}
+
+.container {
+    display: none;
+    position: absolute;
+}
+
+.text-area {
+    opacity: 95%;
+    box-shadow: 0 0 5px var(--orange);
+    background-color: var(--purple);
+    color: var(--orange);
+    padding: 20px;
+    display: inline-block;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    transition: 500ms;
+    -webkit-transition: 500ms;
+    -moz-transition: 500ms;
+    -ms-transition: 500ms;
+    -o-transition: 500ms;
+
+}
+
+.text-area p {
+    font-size: 15px;
+    color: var(--orange);
 }
